<resources>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant.</string>
    <string name="button_start">get started!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Cheezer</string>
    <string name="sign_in">Sign in</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
    <string name="our_menu">OUR MENU</string>
    <string name="app_name">TheCheezery</string>
    <string name="accept_terms">I have read and accept the terms and conditions</string>
</resources>