<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:padding="16dp"
    android:background="@color/crema">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/verde"
        android:layout_marginTop="20dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_antojitos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/antojitos"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_especialidades"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/especialidades"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_combinaciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/combinations"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_tortas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/tortas"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_sopas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/sopas"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_bebidas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/drinks"
            android:backgroundTint="@color/rojo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp" />

    </GridLayout>

</LinearLayout>